re PR c++/28387 (ICE with attribute on invalid declaration)

PR c++/28387
	* decl2.c (cplus_decl_attributes): Check for invalid decls.

	* g++.dg/ext/attrib24.C: New test.

From-SVN: r115465